anchor tags for the icons

--- a/home.html
+++ b/home.html
@@ -21,10 +21,10 @@
             <li><a href="#">Socks</a></li>
             <li><a href="#">New Arrivals</a></li>
             <li><a href="#">Store</a></li>
-            <i class="fa-solid fa-magnifying-glass"></i>
-            <i class="fa-regular fa-user"></i>
-            <i class="fa-solid fa-circle-question"></i>
-            <i class="fa-solid fa-cart-shopping"></i>
+            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+            <a href="#"><i class="fa-regular fa-user"></i></a>
+            <a href="#"><i class="fa-solid fa-circle-question"></i></a>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
         </ul>
     </nav>
 
