add to cart change

--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
             <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
             <a href="#"><i class="fa-regular fa-user"></i></a>
             <a href="#"><i class="fa-solid fa-circle-question"></i></a>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i> <span id="cart-count">0</span></a>
         </ul>
     </nav>
 
@@ -112,6 +112,7 @@
                 </div>
 
                 <div class="grid-class e">
+                     <button onclick="addToCart()">Add to Cart</button>
                     <img src="/img/img-6.avif" alt="">
                       <div class="grid-text">
                         <div class="grid-first-text">
@@ -123,6 +124,7 @@
                 </div>
 
                 <div class="grid-class f">
+                     <button onclick="addToCart()">Add to Cart</button>
                     <img src="/img/img-7.avif" alt="">
                        <div class="grid-text">
                         <div class="grid-first-text">
@@ -134,6 +136,7 @@
                 </div>
 
                 <div class="grid-class g">
+                     <button onclick="addToCart()">Add to Cart</button>
                     <img src="/img/img-8.avif" alt="">
                        <div class="grid-text">
                         <div class="grid-first-text">
@@ -145,6 +148,7 @@
                 </div>
 
                 <div class="grid-class h">
+                     <button onclick="addToCart()">Add to Cart</button>
                     <img src="/img/img-9.avif" alt="">
                     <div class="grid-text">
                         <div class="grid-first-text">
@@ -180,6 +184,7 @@
                 <div class="more-shoes">
 
                  <div class="more-class i">
+                      <button onclick="addToCart()">Add to Cart</button>
                     <img src="/img/img-11.avif" alt="">
                     <div class="grid-text">
                         <div class="grid-first-text">
@@ -191,6 +196,7 @@
                 </div>
 
                  <div class="more-class j">
+                      <button onclick="addToCart()">Add to Cart</button>
                     <img src="/img/img-12.avif" alt="">
                     <div class="grid-text">
                         <div class="grid-first-text">
@@ -202,6 +208,7 @@
                 </div>
 
                  <div class="more-class k">
+                      <button onclick="addToCart()">Add to Cart</button>
                     <img src="/img/img-13.avif" alt="">
                     <div class="grid-text">
                         <div class="grid-first-text">
@@ -213,6 +220,7 @@
                 </div>
 
                  <div class="more-class l">
+                      <button onclick="addToCart()">Add to Cart</button>
                     <img src="/img/img-14.avif" alt="">
                     <div class="grid-text">
                         <div class="grid-first-text">
@@ -356,7 +364,7 @@
                     <i class="fa-brands fa-pinterest"></i>
                 </div>
             </div>
-            <div>
+            <div class="footer-lastline">
                 <p>© 2025 Allbirds, Inc. All Rights Reserved. Terms, Privacy & Accessibility <br> Do Not Sell My Personal Information</p>
             </div>
            </footer>
