--- a/home.html
+++ b/home.html
@@ -9,22 +9,33 @@
     <link rel='stylesheet' type='text/css' media='screen' href='/css/home.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <script src='main.js'></script>
+    <script src='index.js'></script>
 </head>
-<body>
     
     <nav class="nav_bar">
         <img src="#" alt="Logo">
 
         <ul>
-            <li><a href="#">Men</a></li>
-            <li><a href="#">Women</a></li>
-            <li><a href="#">Socks</a></li>
-            <li><a href="#">New Arrivals</a></li>
-            <li><a href="#">Store</a></li>
-            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-            <a href="#"><i class="fa-regular fa-user"></i></a>
-            <a href="#"><i class="fa-solid fa-circle-question"></i></a>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i> <span id="cart-count">0</span></a>
+            <div class="dropdown-container">
+              <li><a class="dropdown-main" href="home.html">Home</a></li> 
+              <div class="dropdown">
+                <a href="#">link 1</a>
+                <a href="#">link 1</a>
+                <a href="#">link 1</a>
+                <a href="#">link 1</a>
+                <a href="#">link 1</a>
+              </div>
+            </div>
+            
+            <li><a href="men.html">Men</a></li>
+            <li><a href="women.html">Women</a></li>
+            <li><a href="socks.html">Socks</a></li>
+            <li><a href="new-arrival.html">New Arrivals</a></li>
+            <li><a href="store.html">Store</a></li>
+            <a href="#"><i style="color: #000;" class="fa-solid fa-magnifying-glass"></i></a>
+            <a href="#"><i style="color: #000;" class="fa-regular fa-user"></i></a>
+            <a href="#"><i style="color: #000;" class="fa-solid fa-circle-question"></i></a>
+            <a href="#"><i style="color: #000;" class="fa-solid fa-cart-shopping"></i> <span id="cart-count">0</span></a>
         </ul>
     </nav>
 
